# survival-calculator

./: LICENSE  README.md  example.yaml  finance-info.yaml
core/: Cargo.toml
core/src/: cost.rs  lib.rs  main.rs
core/src/cost/: cost_core.rs  unit.rs
core/tests/: tests.rs
core/tests/cost/: cost_tests.rs  mod.rs
