[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
colored = "2"
requestty = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
num-format = "0.4.0"